[WIP] Added possibility to rename file (#32)
Added possibility to rename file and edit labels
