# swagger.yml
@@ -213,6 +213,44 @@ paths:
       - token_auth:
         - 'profile'
 
+  /file/{resource_id}:
+    put:
+      tags:
+      - 'Storage-Authorize'
+      summary: 'Request to modify file metadata'
+      description: 'Request the modification of `resource:file_name` and/or `annotation:label` metadata descriptors'
+      parameters:
+      - description: ID of file to modify
+        in: path
+        name: resource_id
+        required: true
+        type: string
+      - name: body
+        in: body
+        description: 'File update request object'
+        required: true
+        schema:
+          $ref: '#/definitions/FileUpdateRequest'
+      - name: Renga-Deployer-Execution
+        in: header
+        description: 'Deployment id, passed if request made from deployed application'
+        type: integer
+        format: int64
+      - name: Renga-Projects-Project
+        in: header
+        description: 'Project id, passed to make this file explicitly part of a project'
+        type: integer
+        format: int64
+      responses:
+        200:
+          description: ok
+          schema:
+            type: object
+        404:
+          description: File not found
+      security:
+      - token_auth:
+        - 'profile'
 definitions:
   ReadFileRequest:
     type: object
@@ -278,6 +316,15 @@ definitions:
         type: string
         enum:
           - "create_file"
+      labels:
+        type: array
+        items:
+          type: string
+  FileUpdateRequest:
+    type: object
+    properties:
+      file_name:
+        type: string
       labels:
         type: array
         items:
